[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-utilities"
version = "0.1.0"
description = "Reusable Python utilities for Kaggle notebooks: repo cloning, dataset construction, training loop helpers, and Composer dependency resolution."
readme = "README.md"
license = {text = "LGPL-2.1-only"}
requires-python = ">=3.10"
authors = [
    {name = "Training-Datasmith"},
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["kaggle_utilities*"]
